2009-08-28  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Test dwarfcmp-test binary too.

	* print-die.cc: Grok --stats to dump collector stats.

2009-08-27  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Parameterize.  Take out -T runs.
	* run-dwarfcmp-test-self.sh: New file.  Do just -T runs here.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.

2009-08-25  Roland McGrath  <roland@redhat.com>

	* print-die.hh: New file with extern decls.  Contents moved to ...
	* print-die.cc: ... here, new file.
	* Makefile.am (dwarf_print_SOURCES, dwarf_edit_SOURCES): Build it.

2009-08-21  Roland McGrath  <roland@redhat.com>

	* print-die.hh (print_die_main, print_file): Add --silent option.

2009-08-19  Roland McGrath  <roland@redhat.com>

	* print-die.hh: Handle --norefs, --dump-refs.

2009-07-03  Roland McGrath  <roland@redhat.com>

	* print-die.hh: Grok --sort-attrs option to canonicalize order.
	Fix ref assignment to produce consistent numbering.
	* run-dwarf_edit.sh: Update expected output.
	* run-dwarf-attributes.sh: Likewise.

	* Makefile.am (AM_CXXFLAGS): New variable (from ../src/Makefile.am).

	* print-die.hh: Grok --edit/--output options to print a copied object.

2009-07-02  Roland McGrath  <roland@redhat.com>

	* run-dwarf_edit.sh: New file.
	* dwarf_edit.cc: New file.
	* Makefile.am (noinst_PROGRAMS, TESTS, EXTRA_DIST): Add them.
	(dwarf_edit_SOURCES, dwarf_edit_LDADD): New variables.

	* dwarf-print.cc (print_die): Templatify and move ...
	* print-die.hh: ... here, new file.
	* Makefile.am (noinst_HEADERS): New variable, add it.

2009-07-01  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: Run on dwarflint too.
	Fiddle failure output.

2009-06-15  Roland McGrath  <roland@redhat.com>

	* dwarf-print.cc: Include <cstdio>.

2009-03-25  Petr Machata  <pmachata@redhat.com>

	* dwarf-attributes.cc: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(dwarf_attributes_SOURCES, dwarf_attributes_LDADD): New variables.
