@@ -1,3 +1,8 @@
+2009-09-15  Roland McGrath  <roland@redhat.com>
+
+	* print-die.cc: Grok --refs-shared-cu, --refs-shared-file options
+	to share the refs_map across CUs or across files.
+
 2009-08-28  Roland McGrath  <roland@redhat.com>
 
 	* run-dwarfcmp-self.sh: Test dwarfcmp-test binary too.
